# python-amazon-spapi

./: .sellerpartnerapi.env  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  python-package.yml
spapi/: __init__.py  main.py  setup.py
tests/: conftest.py  test_accesstoken_setup.py  test_setup.py  test_sts_token_setup.py
tests/data/: .invalid_sellerpartnerapi.env
