[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "spapi"
author = "Florian Benkö"
author-email = "florian.benkoe2@web.de"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
    "requests >=2.24.0",
    "pydantic >=1.0"
]
requires-python = ">=3.7"

[tool.flit.metadata.requires-extra]
test = [
    "pytest ==5.4.3",
    "pytest-cov ==2.10.0",
    "pytest-asyncio >=0.14.0,<0.15.0",
    "flake8 >=3.8.3,<4.0.0"
]